feat: api endpoint to list connected/discovered surfaces
