# satellite/src/device-types/loupedeck-live.ts
@@ -18,8 +18,11 @@ import {
 } from './api.js'
 import { parseColor } from './lib.js'
 import { EventEmitter } from 'events'
+import { LOUPEDECK_PLUGIN_ID } from './loupedeck-plugin.js'
 
 export class LoupedeckLiveWrapper extends EventEmitter<WrappedSurfaceEvents> implements WrappedSurface {
+	readonly pluginId = LOUPEDECK_PLUGIN_ID
+
 	readonly #cardGenerator: CardGenerator
 	readonly #deck: LoupedeckDevice
 	readonly #deviceId: string
@@ -31,7 +34,7 @@ export class LoupedeckLiveWrapper extends EventEmitter<WrappedSurfaceEvents> imp
 	#companionSupportsScaling = false
 	#companionSupportsCombinedEncoders = true
 
-	public get deviceId(): string {
+	public get surfaceId(): string {
 		return this.#deviceId
 	}
 	public get productName(): string {
@@ -152,9 +155,9 @@ export class LoupedeckLiveWrapper extends EventEmitter<WrappedSurfaceEvents> imp
 			// Discard
 			return 99
 		}
-		console.log('Registering key events for ' + this.deviceId)
-		this.#deck.on('down', (info) => client.keyDown(this.deviceId, convertButtonId(info.type, info.index, true)))
-		this.#deck.on('up', (info) => client.keyUp(this.deviceId, convertButtonId(info.type, info.index, true)))
+		console.log('Registering key events for ' + this.surfaceId)
+		this.#deck.on('down', (info) => client.keyDown(this.surfaceId, convertButtonId(info.type, info.index, true)))
+		this.#deck.on('up', (info) => client.keyUp(this.surfaceId, convertButtonId(info.type, info.index, true)))
 		this.#deck.on('rotate', (info, delta) => {
 			if (info.type !== LoupedeckControlType.Rotary) return
 
@@ -162,15 +165,15 @@ export class LoupedeckLiveWrapper extends EventEmitter<WrappedSurfaceEvents> imp
 			if (id2 < 90) {
 				if (delta < 0) {
 					if (this.#companionSupportsCombinedEncoders) {
-						client.rotateLeft(this.deviceId, id2)
+						client.rotateLeft(this.surfaceId, id2)
 					} else {
-						client.keyUp(this.deviceId, id2)
+						client.keyUp(this.surfaceId, id2)
 					}
 				} else if (delta > 0) {
 					if (this.#companionSupportsCombinedEncoders) {
-						client.rotateRight(this.deviceId, id2)
+						client.rotateRight(this.surfaceId, id2)
 					} else {
-						client.keyDown(this.deviceId, id2)
+						client.keyDown(this.surfaceId, id2)
 					}
 				}
 			}
@@ -183,14 +186,14 @@ export class LoupedeckLiveWrapper extends EventEmitter<WrappedSurfaceEvents> imp
 		this.#deck.on('touchstart', (data) => {
 			for (const touch of data.changedTouches) {
 				if (touch.target.key !== undefined) {
-					client.keyDown(this.deviceId, translateKeyIndex(touch.target.key))
+					client.keyDown(this.surfaceId, translateKeyIndex(touch.target.key))
 				}
 			}
 		})
 		this.#deck.on('touchend', (data) => {
 			for (const touch of data.changedTouches) {
 				if (touch.target.key !== undefined) {
-					client.keyUp(this.deviceId, translateKeyIndex(touch.target.key))
+					client.keyUp(this.surfaceId, translateKeyIndex(touch.target.key))
 				}
 			}
 		})
